test/Fail/CyclicModuleDependency.err
CyclicModuleDependency.agda:3.1-30: error: [CyclicModuleDependency]
cyclic module dependency:
  CyclicModuleDependency
  importing CyclicModuleDependency
when scope checking the declaration
  import CyclicModuleDependency
